# ManifoldAnalysis

./: .gitattributes  .gitignore  J_loss.py  README.md  analysis.ipynb  classifier.py  classify.ipynb  clusterer.py  component.py  core.py  dimension_analysis.py  fitting.py  geometry.py  grouper.py  pyproject.toml  sampler.py  utils.py
data/: AD.npy  Normal.npy  dimensions.npy  protein_coding_ID.csv
script/: run_classification_tasks.sh
