[project]
name = "manifoldanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "plotly>=6.1.2",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
]

[tool.ruff]
target-version = "py312"
